--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 20px;
+        overflow: hidden;
+        -padding: 20px;
       }
 
       #container {
